@@ -2,7 +2,8 @@
 \alias{annotation_raster}
 \title{Annotation: High-performance rectangular tiling.}
 \usage{
-  annotation_raster(raster, xmin, xmax, ymin, ymax)
+  annotation_raster(raster, xmin, xmax, ymin, ymax,
+    interpolate = FALSE)
 }
 \arguments{
   \item{raster}{raster object to display}
@@ -12,6 +13,9 @@
 
   \item{ymin,ymax}{y location (in data coordinates) giving
   vertical location of raster}
+
+  \item{interpolate}{If \code{TRUE} interpolate linearly,
+  if \code{FALSE} (the default) don't interpolate.}
 }
 \description{
   This is a special version of \code{\link{geom_raster}}
@@ -32,6 +36,15 @@ qplot(mpg, wt, data = mtcars) +
 # To fill up whole plot
 qplot(mpg, wt, data = mtcars) +
   annotation_raster(rainbow, -Inf, Inf, -Inf, Inf) +
+  geom_point()
+
+rainbow2 <- matrix(hcl(seq(0, 360, length = 10), 80, 70), nrow = 1)
+qplot(mpg, wt, data = mtcars) +
+  annotation_raster(rainbow2, -Inf, Inf, -Inf, Inf) +
+  geom_point()
+rainbow2 <- matrix(hcl(seq(0, 360, length = 10), 80, 70), nrow = 1)
+qplot(mpg, wt, data = mtcars) +
+  annotation_raster(rainbow2, -Inf, Inf, -Inf, Inf, interpolate = TRUE) +
   geom_point()
 }
 
